audiobookshelf/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audiobookshelf
  namespace: audiobookshelf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: audiobookshelf
  template:
    metadata:
      labels:
        app: audiobookshelf
    spec:
      containers:
        - name: audiobookshelf
          image: advplyr/audiobookshelf
          ports:
            - containerPort: 80
          volumeMounts:
            - name: audiobookshelf-audiobooks
              mountPath: /audiobooks
            - name: audiobookshelf-podcasts
              mountPath: /podcasts
            - name: audiobookshelf-config
              mountPath: /config
            - name: audiobookshelf-metadata
              mountPath: /metadata
      volumes:
        - name: audiobookshelf-config
          persistentVolumeClaim:
            claimName: audiobookshelf-pvc-config
        - name: audiobookshelf-metadata
          persistentVolumeClaim:
            claimName: audiobookshelf-pvc-metadata
        - name: audiobookshelf-podcasts
          persistentVolumeClaim:
            claimName: audiobookshelf-pvc-podcasts
        - name: audiobookshelf-audiobooks
          persistentVolumeClaim:
            claimName: audiobookshelf-pvc-audiobooks
