audiobookshelf/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: audiobookshelf-service
  namespace: audiobookshelf
spec:
  selector:
    app: audiobookshelf
  ports:
    - name: web
      protocol: TCP
      port: 80
