audiobookshelf/ingress-local.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: audiobookshelf
  namespace: audiobookshelf
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: traefik-forward-auth@kubernetescrd
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - audiobooks.local.traunseenet.com
      secretName: letsencrypt-prod
  rules:
    - host: audiobooks.local.traunseenet.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: audiobookshelf-service
                port:
                  name: web
